--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@
         <li>&emsp;&emsp;&rarr; La estrella misteriosa</li>
         <li>&emsp;&emsp;&rarr; El secreto del Unicornio</li>
         <li>&emsp;&emsp;&rarr; El tesoro de Rackham el Rojo</li>
+        <li>&emsp;&emsp;&rarr; Las siete bolas de cristal</li>
+        <li>&emsp;&emsp;&rarr; El Templo del Sol</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
