--- a/index.html
+++ b/index.html
@@ -289,6 +289,9 @@
         <li>&emsp;&emsp;&rarr; El tesoro de Rackham el Rojo</li>
         <li>&emsp;&emsp;&rarr; Las siete bolas de cristal</li>
         <li>&emsp;&emsp;&rarr; El Templo del Sol</li>
+        <li>&emsp;&emsp;&rarr; Tintín en el país del oro negro</li>
+        <li>&emsp;&emsp;&rarr; Objetivo: la Luna</li>
+        <li>&emsp;&emsp;&rarr; Atterizaje en la Luna</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
@@ -526,7 +529,7 @@
       </p>
       2023:
       <ul>
-        <li>🎮 <em><strong>The Last of Us: Part 1</em></strong> on Playstation 5, 10 hours</li>
+        <li>🔥 <em><strong>The Last of Us: Part 1 + Left Behind</em></strong> on Playstation 5, 21 hours</li>
         <li>🔥 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 180 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country 2</em></strong> on SNES (emulated), 5 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country</em></strong> on SNES (emulated), 5 hours</li>
