--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@
     <p>I’m Pedro Arilla (1984—), a designer with a passion for words, Co-Founder and Type Director of <a href="https://arillatype.studio">Arillatype.Studio®</a> where we help brands worldwide to encapsulate their voices typographically.</p>
     <p>I’ve led font projects for clients such as Google, Coca-Cola, LaLiga, Unilever, Paralympics and UEFA, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts.</p>
     <p>I previously graduated with Distinction in the world’s top Typeface Design Masters at the University of Reading (UK), and worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA).</p>
-    <p>I’m publishing a book on type evaluation (Campgràfic, 2024).</p>
+    <p>I’m publishing a book on type evaluation (Campgràfic, 2024). For more than a decade, I published one of the most prominent blogs and podcasts about typography in Spanish (Don Serifa).</p>
     <h2>🇪🇸 Sobre mí</h2>
     <p>Soy Pedro Arilla (1984—), un diseñador apasionado por las palabras, cofundador y Director Tipográfico de <a href="https://arillatype.studio">Arillatype.Studio®</a> donde ayudamos a marcas de todo el mundo a encapsular sus voces tipográficamente.</p>
     <p>He liderado proyectos tipográficos para clientes como Google, Coca-Cola, LaLiga, Unilever, Juegos Paralímpicos y UEFA, y diseñado tipografías en los sistemas de escritura latino, árabe, cirílico, griego, tailandés y japonés.</p>
     <p>Anteriormente, me gradué con Distinción en el Máster en Diseño de Tipografía en la prestigiosa Universidad de Reading (Reino Unido), y trabajé como Director Creativo en las legendarias fundiciones Fontsmith (Reino Unido) y Monotype (Estados Unidos).</p>
-    <p>Próximamente voy a publicar un libro sobre evaluación tipográfica (Campgràfic, 2024).</p>
+    <p>Próximamente voy a publicar un libro sobre evaluación tipográfica (Campgràfic, 2024). Durante más de una década publiqué uno de los blogs y podcasts más importantes sobre tipografía en español (Don Serifa).</p>
   </section>
     <section class="content" id="contact">
     <h2>Contact</h2>
@@ -275,6 +275,7 @@
       </p>
       2023:
       <ul>
+        <li>❤️ <em><strong>Paternidad aquí y ahora</em></strong> de Máximo Peña</li>
         <li>♻️ <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
         <li>&emsp;&emsp;&rarr; Tintín en el Congo</li>
         <li>&emsp;&emsp;&rarr; Tintín en América</li>
