--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <p>I’m Pedro Arilla (1984—), a designer with a passion for words, Co-Founder and Type Director of <a href="https://arillatype.studio">Arillatype.Studio®</a> where we help brands worldwide to encapsulate their voices typographically.</p>
     <p>I’ve led font projects for clients such as Google, Coca-Cola, LaLiga, Unilever, Paralympics and UEFA, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts.</p>
     <p>I previously graduated with Distinction in the world’s top Typeface Design Masters at the University of Reading (UK), and worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA).</p>
-    <p>I’m publishing a book on type evaluation (Campgràfic, 2024). For more than a decade, I published one of the most prominent blogs and podcasts about typography in Spanish (Don Serifa).</p>
+    <p>I’m publishing a book on type evaluation (Campgràfic, 2024). For over a decade, I ran one of the most important blogs and podcasts on typography in Spanish (Don Serifa).</p>
     <h2>🇪🇸 Sobre mí</h2>
     <p>Soy Pedro Arilla (1984—), un diseñador apasionado por las palabras, cofundador y Director Tipográfico de <a href="https://arillatype.studio">Arillatype.Studio®</a> donde ayudamos a marcas de todo el mundo a encapsular sus voces tipográficamente.</p>
     <p>He liderado proyectos tipográficos para clientes como Google, Coca-Cola, LaLiga, Unilever, Juegos Paralímpicos y UEFA, y diseñado tipografías en los sistemas de escritura latino, árabe, cirílico, griego, tailandés y japonés.</p>
