--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
       </p>
       2023:
       <ul>
+        <li>❤️ <em><strong>Todo vuelve</em></strong> de Juan Gómez-Jurado</li>
+        <li>❤️ <em><strong>Todo arde</em></strong> de Juan Gómez-Jurado</li>
+        <li>✅ <em><strong>Mi parto robado</em></strong> de Nahia Alkorta</li>
         <li>❤️ <em><strong>Paternidad aquí y ahora</em></strong> de Máximo Peña</li>
         <li>♻️ <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
         <li>&emsp;&emsp;&rarr; Tintín en el Congo</li>
@@ -299,6 +302,7 @@
         <li>&emsp;&emsp;&rarr; Volumen 1</li>
         <li>&emsp;&emsp;&rarr; Volumen 2</li>
         <li>&emsp;&emsp;&rarr; Volumen 3</li>
+        <li>&emsp;&emsp;&rarr; Volumen 4</li>
         <li>✅ <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
         <li>✅ <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
@@ -361,7 +365,7 @@
         <li>⏹️ <em><strong>Apocalipsis</em></strong> de Stephen King</li>
         <li>⏹️ <em><strong>Bibliotecas imaginarias</em></strong> de Mario Satz</li>
         <li>🔥 <em><strong>Alguien habló de nosotros</em></strong> de Irene Vallejo</li>
-        <li>🔥 <em><strong>Por si las voces vuelven</em></strong> de Ángel Martín</li>
+        <li>❤️ <em><strong>Por si las voces vuelven</em></strong> de Ángel Martín</li>
         <li>✅ <em><strong>El desorden de los libros</em></strong> de Massimo Gatta</li>
         <li>✅ <em><strong>Especial NBA 75 aniversario Gigantes</em></strong> de VV.AA.</li>
         <li>✅ <em><strong>Libros y libreros en la antigüedad</em></strong> de Alfonso Reyes</li>
@@ -390,7 +394,7 @@
         <li>♻️ <em><strong>Los asquerosos</em></strong> de Santiago Lorenzo</li>
         <li>✅ <em><strong>La España de las piscinas</em></strong> de Jorge Dioni López</li>
         <li>❤️ <em><strong>¡Protesto! Videojuegos desde una perspectiva de género</em></strong> de VV.AA. (Anait)</li>
-        <li>🔥 <em><strong>Contra la lectura</em></strong> de Mikita Brottman</li>
+        <li>❤️ <em><strong>Contra la lectura</em></strong> de Mikita Brottman</li>
         <li>❤️ <em><strong>¡Milagro! Éxtasis y sombras en El Palmar de Troya</em></strong> de Jorge Decarlini</li>
         <li>✅ <em><strong>Olivetti, a unidade na diversidade</em></strong> de María Ramos</li>
         <li>✅ <em><strong>El enigma de la habitación 622</em></strong> de Joël Dicker</li>
@@ -678,6 +682,7 @@
     <div class="col2c" id="speaking">
       <p><strong>Speaking</strong></p>
       <ul>
+        <li><strong>Fonts, Tech & Craft.</strong> Galicia Design Week, A Coruña, Spain, 2023.</li>
         <li><strong>Fonts & Branding.</strong> Órbitas, Jaén, Spain, 2023.</li>
         <li><strong>Fonts & Branding.</strong> Semana del Diseño, Granada, Spain, 2023.</li>
         <li><strong>Color fonts & At Amiga.</strong> Cañas y tipos, Palma de Mallorca, Spain, 2022.</li>
