--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@
       </p>
       2023:
       <ul>
+        <li>🥸 <em><strong>Una velada en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
+        <li>🔥 <em><strong>Mis días en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
         <li>❤️ <em><strong>Todo vuelve</em></strong> de Juan Gómez-Jurado</li>
         <li>❤️ <em><strong>Todo arde</em></strong> de Juan Gómez-Jurado</li>
         <li>✅ <em><strong>Mi parto robado</em></strong> de Nahia Alkorta</li>
@@ -296,6 +298,7 @@
         <li>&emsp;&emsp;&rarr; Tintín en el país del oro negro</li>
         <li>&emsp;&emsp;&rarr; Objetivo: la Luna</li>
         <li>&emsp;&emsp;&rarr; Atterizaje en la Luna</li>
+        <li>&emsp;&emsp;&rarr; Stock de Coque</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
