--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
         <li>&emsp;&emsp;&rarr; Tintín en el país del oro negro</li>
         <li>&emsp;&emsp;&rarr; Objetivo: la Luna</li>
         <li>&emsp;&emsp;&rarr; Atterizaje en la Luna</li>
+        <li>&emsp;&emsp;&rarr; El asunto Tornasol</li>
         <li>&emsp;&emsp;&rarr; Stock de Coque</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
