--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
         <li>&emsp;&emsp;&rarr; Atterizaje en la Luna</li>
         <li>&emsp;&emsp;&rarr; El asunto Tornasol</li>
         <li>&emsp;&emsp;&rarr; Stock de Coque</li>
+        <li>&emsp;&emsp;&rarr; Tintín en el Tibet</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
