--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
       </p>
       2023:
       <ul>
+        <li>✅ <em><strong>Batman: La broma asesina</em></strong> de A. Moore y B. Bolland</li>
         <li>✅ <em><strong>Los secretos de Hyrule</em></strong> de Adrián Suárez</li>
         <li>🔥 <em><strong>Una velada en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
         <li>🔥 <em><strong>Mis días en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
