--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
       </p>
       2023:
       <ul>
+        <li>✅ <em><strong>Guía para madres y padres desesperadamente inexpertos</em></strong> de Manel Fontdevilla</li>
         <li>✅ <em><strong>El fuego</em></strong> de David Rubín</li>
         <li>✅ <em><strong>Batman: La broma asesina</em></strong> de A. Moore y B. Bolland</li>
         <li>✅ <em><strong>Los secretos de Hyrule</em></strong> de Adrián Suárez</li>
