--- a/index.html
+++ b/index.html
@@ -273,13 +273,24 @@
       <p>
         Notes: 🥸 Reading / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / ♻️ Re-read
       </p>
-      2023:
+      2024:
+      <ul>
+        <li>🥸 <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
+        <li>&emsp;&emsp;&rarr; Las joyas de la Castafiore</li>
+        <li>&emsp;&emsp;&rarr; Vuelo 714 para Sidney</li>
+        <li>&emsp;&emsp;&rarr; Tintín y el lago de los tiburones</li>
+        <li>&emsp;&emsp;&rarr; Tintín y los pícaros</li>
+        <li>🔥 <em><strong>Una velada en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
+        <li>✅ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
+        <li>&emsp;&emsp;&rarr; #4 (Vol. 10–12)</li>
+        <li>✅ <em><strong>El cerebro del niño explicado a los padres</em></strong> de Álvaro Bilbao</li>
+      </ul>
+      <br>2023:
       <ul>
         <li>✅ <em><strong>Guía para madres y padres desesperadamente inexpertos</em></strong> de Manel Fontdevilla</li>
         <li>✅ <em><strong>El fuego</em></strong> de David Rubín</li>
         <li>✅ <em><strong>Batman: La broma asesina</em></strong> de A. Moore y B. Bolland</li>
         <li>✅ <em><strong>Los secretos de Hyrule</em></strong> de Adrián Suárez</li>
-        <li>🔥 <em><strong>Una velada en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
         <li>🔥 <em><strong>Mis días en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
         <li>❤️ <em><strong>Todo vuelve</em></strong> de Juan Gómez-Jurado</li>
         <li>❤️ <em><strong>Todo arde</em></strong> de Juan Gómez-Jurado</li>
@@ -308,10 +319,9 @@
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
-        <li>&emsp;&emsp;&rarr; Volumen 1</li>
-        <li>&emsp;&emsp;&rarr; Volumen 2</li>
-        <li>&emsp;&emsp;&rarr; Volumen 3</li>
-        <li>&emsp;&emsp;&rarr; Volumen 4</li>
+        <li>&emsp;&emsp;&rarr; #1 (Vol. 1–3)</li>
+        <li>&emsp;&emsp;&rarr; #2 (Vol. 4–6)</li>
+        <li>&emsp;&emsp;&rarr; #3 (Vol. 7–9)</li>
         <li>✅ <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
         <li>✅ <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
@@ -541,9 +551,13 @@
       <strong>Gaming</strong>
       <p>Notes: 🎮 Playing / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / 💯 100% completed / ♻️ Replayed
       </p>
-      2023:
+      </ul>
+      2024:
       <ul>
-        <li>🔥 <em><strong>The Last of Us: Part 1 + Left Behind</em></strong> on Playstation 5, 21 hours</li>
+        <li>🎮 <em><strong>Dark Souls 3</em></strong> on Playstation 5, 6 hours</li>
+      <br>2023:
+      <ul>
+        <li>🔥 <em><strong>The Last of Us: Part 1</em></strong> on Playstation 5, 18 hours</li>
         <li>🔥 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 180 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country 2</em></strong> on SNES (emulated), 5 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country</em></strong> on SNES (emulated), 5 hours</li>
