--- a/index.html
+++ b/index.html
@@ -554,7 +554,8 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Dark Souls 3</em></strong> on Playstation 5, 6 hours</li>
+        <li>🎮 <em><strong>Dark Souls 3</em></strong> on Playstation 5, 9 hours</li>
+        <li>🎮 <em><strong>Storyteller</em></strong> on iOS, 2 hours</li>
       <br>2023:
       <ul>
         <li>🔥 <em><strong>The Last of Us: Part 1</em></strong> on Playstation 5, 18 hours</li>
