--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <li>&emsp;&emsp;&rarr; Tintín y el lago de los tiburones</li>
         <li>&emsp;&emsp;&rarr; Tintín y los pícaros</li>
         <li>🔥 <em><strong>Una velada en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
-        <li>✅ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
+        <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
         <li>&emsp;&emsp;&rarr; #4 (Vol. 10–12)</li>
         <li>✅ <em><strong>El cerebro del niño explicado a los padres</em></strong> de Álvaro Bilbao</li>
       </ul>
@@ -554,8 +554,8 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Dark Souls 3</em></strong> on Playstation 5, 9 hours</li>
-        <li>🎮 <em><strong>Storyteller</em></strong> on iOS, 2 hours</li>
+        <li>🎮 <em><strong>Dark Souls 3</em></strong> on Playstation 5, 16 hours</li>
+        <li>✅ <em><strong>Storyteller</em></strong> on iOS, 2 hours</li>
       <br>2023:
       <ul>
         <li>🔥 <em><strong>The Last of Us: Part 1</em></strong> on Playstation 5, 18 hours</li>
