--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
       </p>
       2024:
       <ul>
+        <li>🥸 <em><strong>Libros para no perderse</em></strong> de VV.AA. (elDiario.es)</li>
         <li>🥸 <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
         <li>&emsp;&emsp;&rarr; Las joyas de la Castafiore</li>
         <li>&emsp;&emsp;&rarr; Vuelo 714 para Sidney</li>
@@ -554,7 +555,7 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Dark Souls 3</em></strong> on Playstation 5, 16 hours</li>
+        <li>🎮 <em><strong>Dark Souls 3</em></strong> on Playstation 5, 26 hours</li>
         <li>✅ <em><strong>Storyteller</em></strong> on iOS, 2 hours</li>
       <br>2023:
       <ul>
@@ -673,9 +674,16 @@
         </thead>
         <tbody>
           <tr>
+            <td>2024/01/28</td>
+            <td>Media Maratón Sevilla</td>
+            <td>21K</td>
+            <td>1:58:33</td>
+            <td>5:37</td>
+          </tr>
+          <tr>
             <td>2023/10/29</td>
             <td>Media Maratón Málaga</td>
-            <td>21,097K</td>
+            <td>21K</td>
             <td>1:59:22</td>
             <td>5:39</td>
           </tr>
