--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
         <li>&emsp;&emsp;&rarr; Vuelo 714 para Sidney</li>
         <li>&emsp;&emsp;&rarr; Tintín y el lago de los tiburones</li>
         <li>&emsp;&emsp;&rarr; Tintín y los pícaros</li>
+        <li>❤️ <em><strong>El labrador de más aire</em></strong> de Miguel Hernández</li>
         <li>🔥 <em><strong>Una velada en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
         <li>&emsp;&emsp;&rarr; #4 (Vol. 10–12)</li>
