--- a/index.html
+++ b/index.html
@@ -551,12 +551,13 @@
     </div>
     <div class="col2c" id="gaming">
       <strong>Gaming</strong>
-      <p>Notes: 🎮 Playing / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / 💯 100% completed / ♻️ Replayed
+      <p>Notes: 🎮 Playing / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / ♻️ Replayed
       </p>
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Dark Souls 3</em></strong> on Playstation 5, 26 hours</li>
+        <li>🎮 <em><strong>Laika</em></strong> on Playstation 5, 2 hours</li>
+        <li>❤️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 32 hours</li>
         <li>✅ <em><strong>Storyteller</em></strong> on iOS, 2 hours</li>
       <br>2023:
       <ul>
@@ -587,7 +588,7 @@
         <li>⏹️ <em><strong>Streets of Rage 4</em></strong> on Playstation 5, 4 hours</li>
         <li>⏹️ <em><strong>Fall Guys</em></strong> on Playstation 5, 10 hours</li>
         <li>⏹️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 2 hours</li>
-        <li>💯 <em><strong>Elden Ring</em></strong> on Playstation 5, 117 hours</li>
+        <li>🔥 <em><strong>Elden Ring</em></strong> on Playstation 5, 117 hours</li>
         <li>⏹️ <em><strong>Cyberpunk 2077</em></strong> on Playstation 5, 2 hours</li>
         <li>❤️ <em><strong>Death’s Door</em></strong> on Playstation 5, 16 hours</li>
         <li>⏹️ <em><strong>The Legend of Zelda: The Minish Cap</em></strong> on Game Boy Advance (emulated), 2 hours</li>
@@ -622,7 +623,7 @@
         <li>⏹️ <em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 10 hours</li>
         <li>⏹️ <em><strong>Pokémon: Crystal</em></strong> on Game Boy (emulated), 10 hours</li>
         <li>❤️ <em><strong>Luigi’s Mansion 3</em></strong> on Nintendo Switch, 18 hours</li>
-        <li>🔥 <em><strong>Zelda: A link to the past</em></strong> on Game Boy Advance (emulated), 20 hours</li>
+        <li>❤️ <em><strong>Zelda: A link to the past</em></strong> on Game Boy Advance (emulated), 20 hours</li>
         <li>✅ <em><strong>Gris</em></strong> on Nintendo Switch, 3 hours</li>
         <li>✅ <em><strong>Mario Kart 8 Deluxe</em></strong> on Nintendo Switch, 20 hours</li>
         <li>⏹️ <em><strong>Immortals Fenyx Rising</em></strong> on Nintendo Switch, 30 hours</li>
