--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
       2024:
       <ul>
         <li>🥸 <em><strong>Libros para no perderse</em></strong> de VV.AA. (elDiario.es)</li>
-        <li>🥸 <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
+        <li>🥸 <em><strong>.ss01</em></strong> by VV.AA. (Type Design Magazine)</li>
+        <li>♻️ <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
         <li>&emsp;&emsp;&rarr; Las joyas de la Castafiore</li>
         <li>&emsp;&emsp;&rarr; Vuelo 714 para Sidney</li>
         <li>&emsp;&emsp;&rarr; Tintín y el lago de los tiburones</li>
