--- a/index.html
+++ b/index.html
@@ -275,13 +275,14 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>Libros para no perderse</em></strong> de VV.AA. (elDiario.es)</li>
         <li>🥸 <em><strong>.ss01</em></strong> by VV.AA. (Type Design Magazine)</li>
         <li>♻️ <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
         <li>&emsp;&emsp;&rarr; Las joyas de la Castafiore</li>
         <li>&emsp;&emsp;&rarr; Vuelo 714 para Sidney</li>
         <li>&emsp;&emsp;&rarr; Tintín y el lago de los tiburones</li>
         <li>&emsp;&emsp;&rarr; Tintín y los pícaros</li>
+        <li>✅ <em><strong>Necesidad del libro</em></strong> de Ángel María de Lera</li>
+        <li>✅ <em><strong>Libros para no perderse</em></strong> de VV.AA. (elDiario.es)</li>
         <li>❤️ <em><strong>El labrador de más aire</em></strong> de Miguel Hernández</li>
         <li>🔥 <em><strong>Una velada en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
@@ -557,7 +558,7 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Laika</em></strong> on Playstation 5, 2 hours</li>
+        <li>🎮 <em><strong>Laika: Aged through blood</em></strong> on Playstation 5, 2 hours</li>
         <li>❤️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 32 hours</li>
         <li>✅ <em><strong>Storyteller</em></strong> on iOS, 2 hours</li>
       <br>2023:
