--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
       </p>
       2024:
       <ul>
+        <li>🥸 <em><strong>Escribir es vivir</em></strong> de José Luis Sampedro</li>
         <li>🥸 <em><strong>.ss01</em></strong> by VV.AA. (Type Design Magazine)</li>
         <li>♻️ <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
         <li>&emsp;&emsp;&rarr; Las joyas de la Castafiore</li>
@@ -558,7 +559,9 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Laika: Aged through blood</em></strong> on Playstation 5, 2 hours</li>
+        <li>🎮 <em><strong>Red Dead Redemption 2</em></strong> on Playstation 5, 1 hours</li>
+        <li>🎮 <em><strong>eFootball™ 2024</em></strong> on Playstation 5, 1 hours</li>
+        <li>⏹️ <em><strong>Laika: Aged through blood</em></strong> on Playstation 5, 2 hours</li>
         <li>❤️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 32 hours</li>
         <li>✅ <em><strong>Storyteller</em></strong> on iOS, 2 hours</li>
       <br>2023:
