--- a/index.html
+++ b/index.html
@@ -266,7 +266,6 @@
       <a onclick="logs(4)">Speaking</a><br>
       <a onclick="logs(5)">Teaching</a><br>
       <a onclick="logs(6)">Awards</a><br>
-      <a onclick="logs(7)">Exhibitions</a>
     </div>
     <div class="col2c" id="reading">
       <strong>Reading</strong>
@@ -276,7 +275,7 @@
       2024:
       <ul>
         <li>🥸 <em><strong>Escribir es vivir</em></strong> de José Luis Sampedro</li>
-        <li>🥸 <em><strong>.ss01</em></strong> by VV.AA. (Type Design Magazine)</li>
+        <li>✅ <em><strong>.ss01</em></strong> by VV.AA. (Type Design Magazine)</li>
         <li>♻️ <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
         <li>&emsp;&emsp;&rarr; Las joyas de la Castafiore</li>
         <li>&emsp;&emsp;&rarr; Vuelo 714 para Sidney</li>
@@ -755,6 +754,7 @@
     <div class="col2c" id="teaching">
       <p><strong>Teaching</strong></p>
       <ul>
+        <li><strong>Type mentoring.</strong> Escuela San Telmo, Málaga, Spain, 2024.</li>
         <li><strong>Type design.</strong> VII Glíglifo, Sos del Rey Católico, Spain, 2023.</li>
         <li><strong>Colour Fonts.</strong> Escuela José Val del Omar, Granada, Spain, 2023.</li>
         <li><strong>Type design.</strong> Glíglifo Mini, Palma de Mallorca, Spain, 2022.</li>
@@ -811,28 +811,13 @@
         <li><strong>Cannes Lions 2019</strong>, Shortlisted for <em>Amsteldok</em>.</li>
         <li><strong>European Design Awards 2019</strong>, Silver for <em>FS Neruda</em>.</li>
         <li><strong>Modern Cyrillic 2019</strong>, one of the winners for <em>FS Brabo Pro</em>.</li>
-        <li><strong>D&AD 2019</strong>, Wooden Pencil for <em>Storytelling Serifs Specimen</em>.</li>
+        <li><strong>D&AD 2019</strong>, Wood Pencil for <em>Storytelling Serifs Specimen</em>.</li>
         <li><strong>Creative Circle 2019</strong>, Gold for <em>Lost & Foundry</em>.</li>
         <li><strong>Gerard Unger Scholarship 2017</strong> (TypeTogether), Mention for <em>Rock & Roll</em>.</li>
         <li><strong>Behance 2012</strong> (Adobe), Most appreciated projects for <em>Valentina</em>.</li>
         <li><strong>CEA 2012</strong>, 2nd best project for <em>Valentina</em>.</li>
       </ul>
     </div>
-    <div class="col2c" id="exhibitions">
-      <p><strong>Exhibitions</strong></p>
-      <ul>
-        <li><strong>New Bulgarian Typography 2</strong> (collective). Cyrillic type design, Moscow (Russia) and Sofia (Bulgaria), 2019.</li>
-        <li><strong>Tipografía en la cultura contemporánea</strong> (collective). Type design, Monterrey, Mexico, 2018.</li>
-        <li><strong>Una tipografía para Buñuel</strong> (collective). Type design, Madrid, Spain, 2018.</li>
-        <li><strong>Revival salsero</strong> (collective). Type design, Bogotá, Colombia, 2018.</li>
-        <li><strong>Typostammtisch</strong> (collective). Type design, Berlin, Germany, 2018.</li>
-        <li><strong>ATypI</strong> (collective). Type design, Montreal, Canada, 2017.</li>
-        <li><strong>Cuántos síes contienen tus noes</strong> (individual). Mural calligraphy and poetry, Zaragoza, Spain, 2015.</li>
-        <li><strong>Cada letra cuenta una historia</strong> (collective). Type design, Valencia, Spain, 2014.</li>
-        <li><strong>Homenaje a Rubén Fontana</strong> (collective). Type design, Valencia, Spain, 2014.</li>
-        <li><strong>VIII Jornadas ESDA</strong> (collective). Type design, Zaragoza, Spain, 2014.</li>
-        <li><strong>Ampersand</strong> (collective). Type design, Brighton, UK, 2013.</li>
-      </ul>
     </div>
   </section>
   <section class="footer">
