--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@
       2024:
       <ul>
         <li>🥸 <em><strong>Escribir es vivir</em></strong> de José Luis Sampedro</li>
+        <li>♻️ <em><strong>Astérix</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>&emsp;&emsp;&rarr; Astérix y Cleopatra</li>
+        <li>&emsp;&emsp;&rarr; Astérix en Hispania</li>
+        <li>✅ <em><strong>Todos a la cama</em></strong> de Álvaro Bilbao</li>
         <li>✅ <em><strong>El cerebro del niño explicado a los padres</em></strong> de Álvaro Bilbao</li>
         <li>✅ <em><strong>.ss01</em></strong> by VV.AA. (Type Design Magazine)</li>
         <li>♻️ <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
@@ -558,8 +562,8 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>eFootball 2024</em></strong> on Playstation 5, 10 hours</li>
-        <li>🎮 <em><strong>Red Dead Redemption 2</em></strong> on Playstation 5, 1 hours</li>
+        <li>🎮 <em><strong>eFootball 2024</em></strong> on Playstation 5, 20 hours</li>
+        <li>⏹️ <em><strong>Red Dead Redemption 2</em></strong> on Playstation 5, 1 hours</li>
         <li>⏹️ <em><strong>Laika: Aged through blood</em></strong> on Playstation 5, 2 hours</li>
         <li>❤️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 32 hours</li>
         <li>✅ <em><strong>Storyteller</em></strong> on iOS, 2 hours</li>
