--- a/index.html
+++ b/index.html
@@ -562,7 +562,8 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>eFootball 2024</em></strong> on Playstation 5, 20 hours</li>
+        <li>🎮 <em><strong>Vampire Survivors</em></strong> on iOS, 2 hours</li>
+        <li>🎮 <em><strong>eFootball 2024</em></strong> on Playstation 5, 24 hours</li>
         <li>⏹️ <em><strong>Red Dead Redemption 2</em></strong> on Playstation 5, 1 hours</li>
         <li>⏹️ <em><strong>Laika: Aged through blood</em></strong> on Playstation 5, 2 hours</li>
         <li>❤️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 32 hours</li>
