--- a/index.html
+++ b/index.html
@@ -687,6 +687,13 @@
         </thead>
         <tbody>
           <tr>
+            <td>2024/03/10</td>
+            <td>Media Maratón Málaga</td>
+            <td>21K</td>
+            <td>1:55:41</td>
+            <td>5:29</td>
+          </tr>
+          <tr>
             <td>2024/01/28</td>
             <td>Media Maratón Sevilla</td>
             <td>21K</td>
