--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
         <li>🥸 <em><strong>Escribir es vivir</em></strong> de José Luis Sampedro</li>
         <li>✅ <em><strong>Astérix</em></strong> de J. Y. Ferri y D. Conrad</li>
         <li>&emsp;&emsp;&rarr; Astérix en Italia</li>
+        <li>&emsp;&emsp;&rarr; Astérix tras las huellas del grifo</li>
         <li>♻️ <em><strong>Astérix</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>&emsp;&emsp;&rarr; Astérix y Cleopatra</li>
         <li>&emsp;&emsp;&rarr; Astérix en Hispania</li>
@@ -564,8 +565,8 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Vampire Survivors</em></strong> on iOS, 5 hours</li>
-        <li>🎮 <em><strong>eFootball 2024</em></strong> on Playstation 5, 29 hours</li>
+        <li>🎮 <em><strong>eFootball 2024</em></strong> on Playstation 5, 35 hours</li>
+        <li>✅ <em><strong>Vampire Survivors</em></strong> on iOS, 8 hours</li>
         <li>⏹️ <em><strong>Red Dead Redemption 2</em></strong> on Playstation 5, 1 hours</li>
         <li>⏹️ <em><strong>Laika: Aged through blood</em></strong> on Playstation 5, 2 hours</li>
         <li>❤️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 32 hours</li>
