--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
       2024:
       <ul>
         <li>🥸 <em><strong>Escribir es vivir</em></strong> de José Luis Sampedro</li>
+        <li>🥸 <em><strong>Somos la leche</em></strong> de Alba Padró</li>
         <li>✅ <em><strong>Astérix</em></strong> de J. Y. Ferri y D. Conrad</li>
         <li>&emsp;&emsp;&rarr; Astérix en Italia</li>
         <li>&emsp;&emsp;&rarr; Astérix tras las huellas del grifo</li>
@@ -566,7 +567,8 @@
       2024:
       <ul>
         <li>🎮 <em><strong>eFootball 2024</em></strong> on Playstation 5, 35 hours</li>
-        <li>✅ <em><strong>Vampire Survivors</em></strong> on iOS, 8 hours</li>
+        <li>🎮 <em><strong>Prince of Persia: The Lost Crown</em></strong> on Playstation 5, 3 hours</li>
+        <li>✅ <em><strong>Vampire Survivors</em></strong> on iOS, 10 hours</li>
         <li>⏹️ <em><strong>Red Dead Redemption 2</em></strong> on Playstation 5, 1 hours</li>
         <li>⏹️ <em><strong>Laika: Aged through blood</em></strong> on Playstation 5, 2 hours</li>
         <li>❤️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 32 hours</li>
