--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
         <li>♻️ <em><strong>Astérix</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>&emsp;&emsp;&rarr; Astérix y Cleopatra</li>
         <li>&emsp;&emsp;&rarr; Astérix en Hispania</li>
+        <li>&emsp;&emsp;&rarr; Astérix el Galo</li>
         <li>✅ <em><strong>Todos a la cama</em></strong> de Álvaro Bilbao</li>
         <li>✅ <em><strong>El cerebro del niño explicado a los padres</em></strong> de Álvaro Bilbao</li>
         <li>✅ <em><strong>.ss01</em></strong> by VV.AA. (Type Design Magazine)</li>
@@ -568,7 +569,7 @@
       <ul>
         <li>🎮 <em><strong>eFootball 2024</em></strong> on Playstation 5, 35 hours</li>
         <li>🎮 <em><strong>Prince of Persia: The Lost Crown</em></strong> on Playstation 5, 3 hours</li>
-        <li>✅ <em><strong>Vampire Survivors</em></strong> on iOS, 10 hours</li>
+        <li>✅ <em><strong>Vampire Survivors</em></strong> on iOS, 12 hours</li>
         <li>⏹️ <em><strong>Red Dead Redemption 2</em></strong> on Playstation 5, 1 hours</li>
         <li>⏹️ <em><strong>Laika: Aged through blood</em></strong> on Playstation 5, 2 hours</li>
         <li>❤️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 32 hours</li>
